--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.7",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.3.2",
-    "web-vitals": "^2.1.4"
+    "react-select": "^5.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/user-event": "^13.5.0",
     "@testing-library/react": "^13.3.0",
     "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
